DELETE intervenant
